# sensor-hub-firmware

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32F105XX_FLASH.ld  csv-DEFAULT.xlsx  pyproject.toml  sensor-hub.ioc
Configs/: default.csv  default.yaml  pedalbox.csv  pedalbox.yaml
Core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
Core/Src/: adc.c  can.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
SUFST/Inc/: hal_util.h  sensors.h
SUFST/Src/: hal_util.c  sensors.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
codegen/: __init__.py  cli.py  cmake.py  constants.py  loader.py  messages.py  models.py  packing.py  rendering.py  validation.py
codegen/models/: config.py  view.py
codegen/templates/: ecu.dbc.j2  sensor_hub.c.j2  sensor_hub.h.j2  sensor_hub_append.dbc.j2
